Changelog
=========

2.4 - UNRELEASED
----------------

- Remove the useless 'changeLanguage' script.  In
  'manage_translations_form', use '@@translate' instead.
  [nouri]

- Allow 'id' to be passed to addTranslation/createTranslation.
  [nouri]

2.3 - Nov 13, 2008
------------------

- Registered NoCopyReferenceAdapter for translationOf relations on
  iterate checkout to avoid the checked out object becoming the
  translation.
  [tesdal]

- Fixed unneeded AlreadyTranslated exception during a schema update.
  A schema update saves the current value, sets the default language
  (at which point there can easily be two English translations if that
  is the default language) and restores the original value again. So
  really there is no reason for doing anything other than setting the
  value in that case.
  [maurits]

- addTranslation now returns the newly created translation.
  [wichert]

- Include the FAQ in the package description.
  [wichert]

- Refactor addTranslation: introduce adapters to determine where
  a translation should be created and to create the translation. 
  [wichert]

- Add path filter in catalog view, like the non-LP version has.
  [mj]

- Ensure that translations are reindexed when processing an edit form;
  language independent fields may have been updated.
  [mj]

- Extracted ILanguageIndependentFields adapter, encapsulating the
  synchronization of language independent fields.
  [stefan]


2.2 - July 22, 2008
-------------------

- LanguageIndependent fields are now shown in view mode for the translations,
  so they no longer are editable from the translations, which is how it's
  documented to behave. [regebro]

- Made the upgrade step also work on Plone 3 (GenericSetup 1.3).
  [maurits]

- Registered GenericSetup upgrade step to get rid of an old
  linguaplone_various import step.  I registered it for upgrading
  from 2.0 to 2.1 as that was when this import step was removed.  It